<resources>
    <string name="app_name">NeWork</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="menu">Menu</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="users">Users</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="attachment">Attachment</string>
    <string name="remove">Remove</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="photo">Photo</string>
    <string name="geolocation">Geolocation</string>
    <string name="addspeakersbutton">addSpeakersButton</string>
    <string name="play">play\n</string>
    <string name="create">Create</string>
    <string name="loginauth">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="avatar" >Avatar</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="emptyloginfield">Login cannot be empty</string>
    <string name="emptypassfield">Password cannot be empty</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="emptynamefield">Name cannot be empty</string>
    <string name="passdontmatch">Passwords don\'t match</string>
    <string name="account">Account</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="event_type_online">Online</string>
    <string name="event_type_offline">Offline</string>
    <string name="sign_out">Sign Out</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="invalid_login">A user with this username has already been registered</string>
    <string name="psswords_dont_match">Passwords don\'t match</string>
    <string name="avatar_format_error">Select an image in JPEG or PNG format</string>
    <string name="likers">Likers</string>
    <string name="mentioned">Mentioned</string>
    <string name="participants">Participants</string>
    <string name="speakers">Speakers</string>
    <string name="looking_job">Looking for a job</string>
    <string name="dash">-</string>
    <string name="now">Now</string>
    <string name="link">Link</string>
    <string name="position">Position</string>
    <string name="select_date">Select date</string>
    <string name="remove_job">Remove job</string>
    <string name="event">Event</string>
    <string name="choose_users">Choose users</string>
    <string name="post">Post</string>
    <string name="new_event">New event</string>
    <string name="new_job">New job</string>
    <string name="you">You</string>
    <string name="registration">Registration</string>
    <string name="map">Map</string>
    <string name="new_post">New Post</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
</resources>