<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/purple"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E6E0E9" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/positionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position"
            app:boxStrokeColor="@color/purple"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/positionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E6E0E9" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/linkLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/link"
            app:boxStrokeColor="@color/purple"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/linkField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E6E0E9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/selectDateButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:paddingTop="6dp"
                android:layout_marginTop="16dp"
                android:text="@string/select_date"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="8dp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createJobButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:text="@string/create" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>