<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#E6E0E9"
            app:hintTextColor="@color/purple"
            app:boxStrokeColor="@color/purple"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:hint="@string/loginauth">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#E6E0E9"
            app:hintTextColor="@color/purple"
            android:hint="@string/password"
            app:boxStrokeColor="@color/purple"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:errorEnabled="true"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:backgroundTint="@color/purple"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@color/purple"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/signInButton"
            app:layout_constraintStart_toStartOf="@id/signInButton"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>